// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-gcFSfr dHbQmA"
>
  <div
    className="sc-gVIfzB fNbeAA"
  >
    <div
      className="sc-dTbhCw gyJUyB"
    >
      <div
        className="sc-ePycix hChhJd"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-fgiXzq kmRvBd"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-ddkEoM dRCVXb"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-gcFSfr gFPLKX"
>
  <div
    className="sc-gVIfzB fNbeAA"
  >
    <div
      className="sc-dTbhCw gyJUyB"
    >
      <div
        className="sc-ePycix hChhJd"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-fgiXzq kmRvBd"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-ddkEoM dRCVXb"
  >
    <span>
      <button
        className="sc-LoTwT hCYOuf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-inRwDn gWiyjT"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-LoTwT jXDLQ"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-inRwDn gWiyjT"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-gcFSfr dHbQmA"
>
  <div
    className="sc-gVIfzB fiemSl"
  >
    <div
      className="sc-fgiXzq kxXfEP"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-ddkEoM dRCVXb"
    >
      <button
        className="sc-LoTwT bYzyA"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-inRwDn gWiyjT"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-gcFSfr speLe"
>
  <div
    className="sc-gVIfzB fNbeAA"
  >
    <div
      className="sc-dTbhCw gyJUyB"
    >
      <div
        className="sc-ePycix hChhJd"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-fgiXzq kmRvBd"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-ddkEoM dRCVXb"
  >
    <span>
      <button
        className="sc-LoTwT hCYOuf"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-inRwDn gWiyjT"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-LoTwT jXDLQ"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-inRwDn gWiyjT"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-gcFSfr speLe"
  >
    <div
      className="sc-gVIfzB fNbeAA"
    >
      <div
        className="sc-dTbhCw gyJUyB"
      >
        <div
          className="sc-ePycix hChhJd"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-fgiXzq kmRvBd"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-ddkEoM dRCVXb"
    >
      <span>
        <button
          className="sc-LoTwT hCYOuf"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-LoTwT jXDLQ"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-inRwDn gWiyjT"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-gcFSfr dHbQmA"
>
  <div
    className="sc-gVIfzB fNbeAA"
  >
    <div
      className="sc-dTbhCw gyJUyB"
    >
      <div
        className="sc-ePycix hChhJd"
      >
        Title here
      </div>
      <div
        className="sc-hruBXm hvOFPu"
      >
        <svg
          className="sc-lbxAil"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-fgiXzq kmRvBd"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
